# kissimmee.fyi

./: .gitignore  CLAUDE.md  DEVLOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: fetch-notices.yml
data/: KissimmeeFLCodeofOrdinancesEXPORT20250822.xlsx  agenda.md  events.json  pab_meetings.json  pab_meetings_media.json
data/notices/: city-commission.json  osceola-bcc.json  other-boards.json  other.json  pab.json
data/pab_meetings/: 2023-06-07.md  2023-06-07.srt  2023-06-21.md  2023-06-21.srt  2023-07-19.md  2023-07-19.srt  2023-09-06.md  2023-09-06.srt  2023-10-04.md  2023-10-04.srt  2023-11-15.md  2023-11-15.srt  2023-12-20.md  2023-12-20.srt  2024-02-07.md  2024-02-07.srt  2024-03-20.md  2024-03-20.srt  2024-05-15.md  2024-05-15.srt  2024-07-17.md  2024-07-17.srt  2024-08-07.md  2024-08-07.srt  2024-09-04.md  2024-09-04.srt  2024-10-16.md  2024-10-16.srt  2024-11-06.md  (+4 more)
docs/: CNAME  archive.html  archive_template.html  index.html  rss.xml  template.html
posts/: 2025-11-17-pab-recording.md  2025-11-19-pab-recording.md  2026-02-09-advisory-board-handbook.md  2026-02-14-azure-hotel-master-development-agreement.md  2026-03-10-commission-strategic-planning-retreat.md  2026-03-20-espinosa-ethics-complaint.md  README.md  understanding-public-notices.md
src/: civicclerk.py  florida_statutes.md  generate_blog.py  migrate_archives.py  notices_archive.json  notices_archive.json.backup  pab_meetings.py  publicnotices.py  update_notices.py
templates/: blog_index.html  blog_post.html  index.html  pab.html  pab_archive.html
(+29 files in other folders)
