[project]
name = "kissimmee-fyi"
version = "0.1.0"
description = "A collection of tools for scraping and serving information about the city of Kissimmee."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
    "pdf2image>=1.16.3",
    "pillow>=10.1.0",
    "markdown>=3.7",
]
